--- a/GradeManagementSystem/GMS/templates/GMS/addInstructor.html
+++ b/GradeManagementSystem/GMS/templates/GMS/addInstructor.html
@@ -25,11 +25,12 @@
 <nav>
     <div class="nav-wrapper">
       <ul id="nav-mobile" style="text-align:center">
-        <li style="width:288px;text-align:center"><a href="/adminPage/">HOME</a></li>
-        <li style="width:288px;text-align:center"><a href="/addStudent/">ADD STUDENT</a></li>
-        <li style="width:288px;text-align:center"><a href="/addInstructor/">ADD INSTRUCTOR</a></li>
-        <li style="width:288px;text-align:center"><a href="/addCourse/">ADD COURSE</a></li>
-        <li style="width:288px;text-align:center"><a href="{% url 'GMS:logout' %}">LOGOUT</a></li>
+        <li style="width:239.8px;text-align:center"><a href="/adminPage/">HOME</a></li>
+        <li style="width:239.8px;text-align:center"><a href="/addStudent/">ADD STUDENT</a></li>
+        <li style="width:239.8px;text-align:center"><a href="/addInstructor/">ADD INSTRUCTOR</a></li>
+        <li style="width:239.8px;text-align:center"><a href="/addCourse/">ADD COURSE</a></li>
+        <li style="width:239.8px;text-align:center"><a href="/registerStudent/">REGISTER STUDENT</a></li>
+        <li style="width:239.8px;text-align:center"><a href="{% url 'GMS:logout' %}">LOGOUT</a></li>
       </ul>
     </div>
   </nav>
