--- a/GradeManagementSystem/GMS/templates/GMS/successregisterStudent.html
+++ b/GradeManagementSystem/GMS/templates/GMS/successregisterStudent.html
@@ -12,9 +12,9 @@
 	<!--Let browser know website is optimized for mobile-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-
 <body>
-<div style="background-color:DodgerBlue;margin-top:3%;text-align:center">
+	<p style="font-size:16pt;margin-top:0%;background-color:#90EE90;color:white;text-align:center">Student registered to the course successfully.</p>
+<div style="background-color:DodgerBlue;text-align:center">
 		<a href="/adminPage/" style="font-size: 50px;color:white;align:left;">Welcome to IIT - Jodhpur<br>Grade Management System</a>
 		<br>
 	
